--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "template-javascript",
-  "version": "0.0.0",
-  "description": "JavaScript template",
-  "main": "index.js",
+  "name": "project-javascript-node-racer",
+  "version": "0.1.0",
+  "description": "Build a two-player, command-line 'racing' game",
+  "main": "racer.js",
   "dependencies": {},
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jfarmer/template-javascript.git"
+    "url": "git+https://github.com/jfarmer/project-javascript-node-racer.git"
   },
   "keywords": [
     "javascript",
@@ -29,7 +29,7 @@
   "author": "Jesse Farmer <jesse@20bits.com>",
   "license": "CC-BY-SA-4.0",
   "bugs": {
-    "url": "https://github.com/jfarmer/template-javascript/issues"
+    "url": "https://github.com/jfarmer/project-javascript-node-racer/issues"
   },
-  "homepage": "https://github.com/jfarmer/template-javascript#readme"
+  "homepage": "https://github.com/jfarmer/project-javascript-node-racer#readme"
 }
